--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
 
     <!-- запрещаем автоматически выделять цифры как телефонные номера -->
     <meta name="format-detection" content="telephone=no">
+    <link rel="icon" href=./favicon.ico>
 </head>
 <body>
 
