css, html+: начал стили для печати и без js

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="./css/style.css" media="screen">
 
     <!-- при отключенном js применяются стили для печати -->
-    <!-- <noscript><link rel="stylesheet" href="./css/print.css"></noscript> -->
+    <noscript><link rel="stylesheet" href="./css/print.css"></noscript>
 
     <!-- описание страницы -->
     <!-- <meta name="description" content="Начальный шаблон"> -->
@@ -38,6 +38,6 @@
 <script src="./js/script.js" defer></script>
 
 <!-- загружаем стили для печити -->
-<!-- <link rel="stylesheet" href=./css/print.css media="print"> -->
+<link rel="stylesheet" href=./css/print.css media="print">
 </body>
 </html>
