css, file+: skiplink

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 <noscript><div class="no-js">У вас отключён или не работает JavaScript, часть функций сайта сейчас недоступна. Попробуйте перезагрузить страницу или воспользуйтесь другим браузером.</div></noscript>
 
 <!-- пропуск меню при таббинге -->
-<!-- <a class="skiplink" href="#content">Перейти к тексту</a> -->
+<a class="skiplink" href="#content">Перейти к тексту</a>
 
 
     <nav class="nav"></nav>
